--- a/classic.html
+++ b/classic.html
@@ -126,6 +126,8 @@
 <p><img src="images/liyanrui1.jpg" alt="" /></p>
 <p><img src="images/liyanrui2.jpg" alt="" /></p>
 <p><img src="images/liyanrui3.jpg" alt="" /></p>
+<p><img src="images/likeyi1.jpg" alt="" /></p>
+<p><img src="images/likeyi2.jpg" alt="" /></p>
 <h2>连世间百态都不配上的傻逼领导</h2>
 								<p>咸阳市期末考试按原计划举行，要求各学科必须上新课。</p>
 
